[package]
name = "rusty-tttm"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.2", features=['http'] }
worker-macros = { version="0.4.2", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
# warp = "0.3"
# tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
getrandom = { version = "0.2", features = ["js"] }
serde_qs = "0.7"
# log = "0.4"
# env_logger = "0.10"